--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chai": "^3.5.0",
     "istanbul": "^0.4.4",
     "mocha": "^2.5.3",
+    "request": "^2.73.0",
     "sinon": "^1.17.4"
   }
 }
