--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "prime-books-jul16",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "./node_modules/.bin/mocha test/*.js",
     "test-coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha test/*.js"
   },
